force-app/main/default/objects/Request_Form_Contact__c/Request_Form_Contact__c.object-meta.xml
<CustomObject>
    <label>Request Form Contact</label>
    <nameField>
        <label>Request Form Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Form Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>