force-app/main/default/objects/Request_Form_Contact__c/fields/Authorized_First_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>Authorized_First_Party_Email__c</fullName>
    <label>Authorized First Party Email</label>
    <type>Email</type>
</CustomField>