force-app/main/default/objects/Request_Form_Contact__c/fields/Authorized_First_Party_Signer__c.field-meta.xml
<CustomField>
    <fullName>Authorized_First_Party_Signer__c</fullName>
    <label>Authorized First Party Signer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>