force-app/main/default/objects/Request_Form_Contact__c/fields/Authorized_Signer__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Request Form Contacts (Authorized Signer)</relationshipLabel>
    <relationshipName>Authorized_Signers</relationshipName>
    <type>Lookup</type>
</CustomField>