force-app/main/default/objects/Request_Form_Contact__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>