force-app/main/default/objects/Request_Form_Contact__c/fields/Contact_Associated__c.field-meta.xml
<CustomField>
    <fullName>Contact_Associated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Associated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Request Form Contacts</relationshipLabel>
    <relationshipName>Request_Form_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>