force-app/main/default/objects/Request_Form_Contact__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>200</length>
    <type>Text</type>
</CustomField>