force-app/main/default/objects/Request_Form_Contact__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
            <value>
                <fullName>Sylectus</fullName>
            </value>
            <value>
                <fullName>Omnitracs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>