force-app/main/default/objects/Request_Form_Contact__c/fields/Is_Person_authorized_to_Sign_NDA__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_authorized_to_Sign_NDA__c</fullName>
    <label>Is Person authorized to Sign NDA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>