force-app/main/default/objects/Request_Form_Contact__c/fields/Multiparty__c.field-meta.xml
<CustomField>
    <fullName>Multiparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multiparty</label>
    <referenceTo>Request_Form__c</referenceTo>
    <relationshipLabel>Multiparties</relationshipLabel>
    <relationshipName>Multiparties</relationshipName>
    <type>Lookup</type>
</CustomField>