force-app/main/default/objects/Request_Form_Contact__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>