force-app/main/default/objects/Request_Form_Contact__c/fields/Party_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_Number__c</fullName>
    <label>Party Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>