force-app/main/default/objects/Request_Form_Contact__c/fields/Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Request_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Request_Form__c</referenceTo>
    <relationshipLabel>Requestors</relationshipLabel>
    <relationshipName>Requestors</relationshipName>
    <type>Lookup</type>
</CustomField>