force-app/main/default/objects/Request_Form_Contact__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province OLD</label>
    <length>200</length>
    <type>Text</type>
</CustomField>