force-app/main/default/objects/Request_Form_Contact__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Street 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>