force-app/main/default/objects/Request_Form_Contact__c/fields/To_Create__c.field-meta.xml
<CustomField>
    <fullName>To_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Create</label>
    <type>Checkbox</type>
</CustomField>