force-app/main/default/objects/Request_Form_Contact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requestor</fullName>
            </value>
            <value>
                <fullName>First Party</fullName>
            </value>
            <value>
                <fullName>Additional Employee</fullName>
            </value>
            <value>
                <fullName>Second Party</fullName>
                <isActive>false</isActive>
                <label>Second Party</label>
            </value>
            <value>
                <fullName>Third Party</fullName>
                <isActive>false</isActive>
                <label>Third Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>