force-app/main/default/objects/Request_Form_Contact__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>