force-app/main/default/objects/Request_Form_Contact__c/recordTypes/Multi_Party.recordType-meta.xml
<RecordType>
    <fullName>Multi_Party</fullName>
    <active>true</active>
    <label>Multi Party</label>
</RecordType>