force-app/main/default/objects/Request_Form_Contact__c/recordTypes/Requestor.recordType-meta.xml
<RecordType>
    <fullName>Requestor</fullName>
    <active>true</active>
    <label>Requestor</label>
</RecordType>