force-app/main/default/objects/Request_Form_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Name__c</columns>
    <columns>Company__c</columns>
    <columns>Account_Associated__c</columns>
    <columns>Request_Form__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>